--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,34 @@
     transform: rotate(360deg);
   }
 }
+
+.row{
+  padding: 10px;
+  margin-top: 20px;
+}
+
+.heading{
+  font-family: 'Righteous', cursive;
+  padding-top: 20px;
+  text-align: center;
+
+}
+
+.container{
+  background-color: #343a40;
+  color: #fff;
+  transition-duration: 0.5s;
+  height: 100vh;
+
+}
+
+.card{
+  color: #343a40 !important;
+  margin: 10px;
+}
+
+
+.danger{
+  color: red;
+  padding: 10px;
+}
